service-switch.yaml
apiVersion: v1
kind: Service
metadata:
  name: bg-switch-service
  namespace: bg-switch
spec:
  type: ExternalName
  externalName: nginx-blue-svc.nginx-blue.svc.cluster.local
