ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: bg-switch
spec:
  ingressClassName: nginx
  rules:
    - host: "example.ganba.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bg-switch-service
                port:
                  number: 80
